@@ -1,0 +1,10 @@
+<div class="authform">
+  <%= form_for(@user) do |f| %>
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control' %>
+    </div>
+    </fieldset>
+    <%= f.submit 'Sign in', :class => 'button right' %>
+  <% end %>
+</div>
